# ssle_project

./: .dockerignore  .gitignore  README.md  docker-compose.yml  incus-network-fix.sh  pyproject.toml  run-attack-tests.sh  setup-complete-cluster.sh  setup-incus-attacker.sh  update_wazuh.sh
k8s/: INCUS_SETUP.md  README.md  analytics-service.yaml  configmaps.yaml  deploy.sh  grafana.yaml  ingestion-service.yaml  namespace.yaml  prometheus.yaml  registry-service.yaml  storage-pvc.yaml  storage-service.yaml  temperature-service.yaml  undeploy.sh  wazuh-agent.yaml  wazuh-dashboard.yaml  wazuh-elasticsearch.yaml  wazuh-manager.yaml  wazuh-namespace.yaml
src/ssle_project/analytics_service/: .env  Dockerfile  analytics_service.py
src/ssle_project/ingestion_service/: .env  Dockerfile  ingestion_service.py
src/ssle_project/registry_service/: .env  Dockerfile  registry_api.py
src/ssle_project/storage_service/: .env  Dockerfile  storage_service.py
src/ssle_project/temperature_service/: .env  Dockerfile  temperature_service.py
wazuh-config/: README.md  action.conf  agent-config.conf  local_rules.xml  mpm_event.conf  ossec.conf  ossec.conf.example
